--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,37 @@
 asgiref==3.4.1
+authentication==1.1.0
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.6
+click==8.0.1
 cryptography==3.4.8
 defusedxml==0.7.1
 dj-rest-auth==2.1.11
 Django==3.2.7
 django-allauth==0.45.0
-django-crispy-forms==1.13.0
+django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 djangorestframework==3.12.4
+Flask==2.0.1
 idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 oauthlib==3.1.1
+passlib==1.7.4
 Pillow==8.3.2
 pycparser==2.20
+pycryptodome==3.10.4
 PyJWT==2.1.0
 python3-openid==3.2.0
 pytz==2021.1
+redis==3.5.3
 requests==2.26.0
 requests-oauthlib==1.3.0
-sqlparse==0.4.2
+six==1.16.0
+social-auth-app-django==5.0.0
+social-auth-core==4.1.0
+sqlparse==0.4.1
 urllib3==1.26.7
+Werkzeug==2.0.1
+WTForms==2.3.3
