--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,16 @@ cryptography==3.4.8
 defusedxml==0.7.1
 dj-rest-auth==2.1.11
 Django==3.2.7
+django-adminlte-ui==1.5.1
 django-allauth==0.45.0
+django-ckeditor==6.2.0
+django-crispy-forms==1.13.0
+django-js-asset==1.2.2
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
+django-static-jquery-ui==1.12.1.1
+django-tabbed-changeform-admin==0.1.6
+django-treebeard==4.3
 djangorestframework==3.12.4
 Flask==2.0.1
 idna==3.2
