--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-allauth==0.45.0
 django-ckeditor==6.2.0
 django-crispy-forms==1.13.0
 django-js-asset==1.2.2
+django-online-users==0.3
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 django-static-jquery-ui==1.12.1.1
@@ -42,3 +43,4 @@ sqlparse==0.4.2
 urllib3==1.26.7
 Werkzeug==2.0.1
 WTForms==2.3.3
+psycopg2-binary
