--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
 asgiref==3.4.1
 authentication==1.1.0
-certifi==2021.5.30
-cffi==1.14.6
 charset-normalizer==2.0.6
-click==8.0.1
-cryptography==3.4.8
-defusedxml==0.7.1
 dj-rest-auth==2.1.11
 Django==3.2.7
 django-adminlte-ui==1.5.1
@@ -20,19 +15,8 @@ django-static-jquery-ui==1.12.1.1
 django-tabbed-changeform-admin==0.1.6
 django-treebeard==4.3
 djangorestframework==3.12.4
-Flask==2.0.1
-idna==3.2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-oauthlib==3.1.1
-passlib==1.7.4
 Pillow==8.3.2
-pycparser==2.20
-pycryptodome==3.10.4
-PyJWT==2.1.0
-python3-openid==3.2.0
-pytz==2021.1
+pre-commit==2.19.0
 redis==3.5.3
 requests==2.26.0
 requests-oauthlib==1.3.0
@@ -41,6 +25,3 @@ social-auth-app-django==5.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.2
 urllib3==1.26.7
-Werkzeug==2.0.1
-WTForms==2.3.3
-psycopg2-binary
